# Mavrik_JAX_Forked

./: .gitignore  README.md  pyproject.toml
jax_mavrik/: mavrik.py  mavrik_setup.py  mavrik_types.py
jax_mavrik/src/: actuator.py  aero_export.py  mavrik_aero.py  simulator.py  sixdof.py
jax_mavrik/src/utils/: mat_tools.py
tests/: test_mavrik.py
